--- a/src/main/resources/templates/updateAttraction.html
+++ b/src/main/resources/templates/updateAttraction.html
@@ -47,7 +47,7 @@
 
   <!-- Ok og fortryd knapper -->
   <button type="submit">Ok</button>
-  <button type="button" onclick="window.location.href='/'">Fortryd</button>
+  <button type="button" onclick="window.location.href='/attractions'">Fortryd</button>
 
 
 </form>
