Tilføjet add og save endpoints med tilhørende html

--- a/src/main/resources/templates/attractionList.html
+++ b/src/main/resources/templates/attractionList.html
@@ -38,7 +38,9 @@
     </tr>
     </tbody>
 </table>
-<button type="button">Tilføj attraktion</button>
+<form th:action="@{attractions/add}" method = get>
+    <button type="submit">Tilføj Attraktion</button>
+</form>
 
 </body>
 </html>
