--- a/src/main/resources/templates/kobenhavnsmuseum.html
+++ b/src/main/resources/templates/kobenhavnsmuseum.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html"
+>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Turistattraktioner i København</title>
-    <link rel="stylesheet" href="martin.css">
+    <link rel="stylesheet" href="../static/martin.css">
 </head>
 <body>
 <header>
@@ -15,7 +16,7 @@
     <h3>Turistattraktioner</h3>
     <ul>
         <li><a class="linka" href="index.html">Forside</a></li>
-        <li><a class="linka" href="frederiksberghave.html">Frederiksberg Have</a></li>
+        <li><a class="linka" href="frederiksberg%20have.html">Frederiksberg Have</a></li>
         <li><a class="linka" href="tivoli.html">Tivoli</a></li>
         <li><a class="linka" href="kobenhavnsmuseum.html">Københavns Museum</a></li>
     </ul>
