--- a/src/main/resources/templates/kobenhavnsmuseum.html
+++ b/src/main/resources/templates/kobenhavnsmuseum.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Turistattraktioner i København</title>
-    <link rel="stylesheet" href="../static/martin.css">
+    <link rel="stylesheet" href="/martin.css">
 </head>
 <body>
 <header>
