--- a/src/main/resources/templates/frederiksberghave.html
+++ b/src/main/resources/templates/frederiksberghave.html
@@ -15,9 +15,9 @@
     <h3>Turistattraktioner</h3>
     <ul>
         <li><a class="linka" href="index.html">Forside</a></li>
-        <li><a class="linka" href="frederiksberg have.html">Frederiksberg Have</a></li>
+        <li><a class="linka" href="frederiksberghave.html">Frederiksberg Have</a></li>
         <li><a class="linka" href="tivoli.html">Tivoli</a></li>
-        <li><a class="linka" href="kobenhavnsmuseum.html">Københavns Museum</a></li>
+        <li><a class="linka" href="københavnsmuseum.html">Københavns Museum</a></li>
     </ul>
 </nav>
 <main>
