--- a/src/main/resources/templates/tivoli.html
+++ b/src/main/resources/templates/tivoli.html
@@ -17,7 +17,7 @@
         <li><a class="linka" href="index.html">Forside</a></li>
         <li><a class="linka" href="frederiksberg%20have.html">Frederiksberg Have</a></li>
         <li><a class="linka" href="tivoli.html">Tivoli</a></li>
-        <li><a class="linka" href="kobenhavnsmuseum.html">Københavns Museum</a></li>
+        <li><a class="linka" href="københavnsmuseum.html">Københavns Museum</a></li>
     </ul>
 </nav>
 <main>
