--- a/src/main/resources/templates/attractionList.html
+++ b/src/main/resources/templates/attractionList.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
-      xmlns:th="https://www.thymeleaf.org"> <!--her angives at vi arbejder med thymeleaf og prefix th skal anvendes, når der skal kaldes attributter-->
+      xmlns:th="https://www.thymeleaf.org">
+<!--her angives at vi arbejder med thymeleaf og prefix th skal anvendes, når der skal kaldes attributter-->
 
 <head>
     <meta charset="UTF-8">
@@ -21,26 +22,41 @@
     </thead>
     <tbody th:each="attraction : ${listOfAttractions}">
     <tr><!-- her kommer næste række i tabellen-->
-        <td th:text="${attraction.name}"></td> <!-- td angiver indhold af hver celle-->
+        <td th:text="${attraction.name}">
+            <!--  <a th: -->>
+        </td> <!-- td angiver indhold af hver celle-->
         <td th:text="${attraction.getDescription()}"></td> <!-- td angiver indhold af hver celle-->
         <td>
-            <form th:action="@{attractions/{attractionName}/edit(attractionName=${attraction.name})}" method = get>
-            <button type="submit">Opdater</button>
-            </form>
+            <div>
+                <form th:action="@{attractions/{attractionName}/edit(attractionName=${attraction.name})}" method=get>
+                    <button type="submit">Opdater</button>
+                </form>
+            </div>
 
-            <form th:action="@{attractions/delete/{attractionName}(attractionName=${attraction.name})}" method="post">
-                <button type="submit">Slet</button>
-            </form>
+            <div>
+                <form th:action="@{attractions/delete/{attractionName}(attractionName=${attraction.name})}"
+                      method="post" onsubmit="return confirmDeletion()">
+                    <button type="submit">Slet</button>
+                </form>
+            </div>
 
-            <form th:action="@{attractions/{attractionName}/tags(attractionName=${attraction.name})}" method="get">
-                <button type="submit">Tags</button>
-            </form>
+            <div>
+            <a th:href="@{attractions/{attractionName}/tags(attractionName=${attraction.name})}" method="get">
+                <button type="button">Tags</button>
+            </a>
+            </div>
+
+            <div>
+                <a th:href="@{attractions/{attractionName}(attractionName=${attraction.name})}">
+                <button>See more information</button>
+                </a>
+            </div>
 
         </td>
     </tr>
     </tbody>
 </table>
-<form th:action="@{attractions/add}" method = get>
+<form th:action="@{attractions/add}" method=get>
     <button type="submit">Tilføj Attraktion</button>
 </form>
 
