Refakturering. Samlet css i en

--- a/src/main/resources/templates/addAttraction.html
+++ b/src/main/resources/templates/addAttraction.html
@@ -7,7 +7,7 @@
     sikres det at bredden af visning bliver det samme som bredden af skærmen. Initial-scale settingen sørger for, at siden ikke starter zoomet ind eller ud, men starter
     i oprindelig skala i forhold til enhedens skærmopløsning.-->
     <title>Add Attraction</title>
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/martin.css">
 </head>
 <body>
 <h1>Add Attraction</h1>
