--- a/src/main/resources/templates/updateAttraction.html
+++ b/src/main/resources/templates/updateAttraction.html
@@ -7,10 +7,10 @@
     sikres det at bredden af visning bliver det samme som bredden af skærmen. Initial-scale settingen sørger for, at siden ikke starter zoomet ind eller ud, men starter
     i oprindelig skala i forhold til enhedens skærmopløsning.-->
     <title>updateAttraction</title>
-  <link rel="stylesheet" href="/main.css">
+  <link rel="stylesheet" href="/martin.css">
 </head>
 <body>
-<h1>Ændrng af informationer</h1>
+<h1>Ændring af informationer</h1>
 <form action="/attractions/update" method="post"> <!--Formularen er oprette med POST-metoden, dvs. når
  vi sender ændringer, så vil de blive håndteret af POST-metoden i controleren-->
 
