--- a/src/main/resources/templates/updateAttraction.html
+++ b/src/main/resources/templates/updateAttraction.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 <h1>Ændring af informationer</h1>
+<main>
 <form action="/attractions/update" method="post"> <!--Formularen er oprette med POST-metoden, dvs. når
  vi sender ændringer, så vil de blive håndteret af POST-metoden i controleren-->
 
@@ -51,6 +52,6 @@
 
 
 </form>
-
+</main>
 </body>
 </html>
