--- a/src/main/resources/templates/attractionList.html
+++ b/src/main/resources/templates/attractionList.html
@@ -9,11 +9,13 @@
     sikres det at bredden af visning bliver det samme som bredden af skærmen. Initial-scale settingen sørger for, at siden ikke starter zoomet ind eller ud, men starter
     i oprindelig skala i forhold til enhedens skærmopløsning.-->
     <title>attractionList</title>
-    <link rel="stylesheet" href="/martin.css">
+    <link rel="stylesheet" href="/list.css">
 </head>
 <body>
+<header>
 <h1>Liste med attraktioner</h1>
-<main>
+</header>
+    <main>
     <table>
         <thead>
         <tr><!-- tr betyder en række af celler i en tabel-->
@@ -57,5 +59,11 @@
         <button type="submit" class="tilføjattractionbutton">Tilføj Attraktion</button>
     </form>
 </main>
+<footer>
+    <p><Strong>Kontakt os her</Strong></p>
+    <p>Email: <a href="#">teamMMMD@failmail.dk</a></p>
+    <p>Mobil: <a href="#">+45 xxxxxxxx</a></p>
+    <p>&copy; 2024 Tourist Guide Part 2 - TeamMMMD (Mark, Martin, Mette, Daniel)</p>
+</footer>
 </body>
 </html>
