--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -8,11 +8,13 @@
     sikres det at bredden af visning bliver det samme som bredden af skærmen. Initial-scale settingen sørger for, at siden ikke starter zoomet ind eller ud, men starter
     i oprindelig skala i forhold til enhedens skærmopløsning.-->
     <title>tags</title>
-    <link rel="stylesheet" href="/martin.css">
+    <link rel="stylesheet" href="/list.css">
 </head>
 <body>
+<header>
 <h1 th:text="${attractionName}"></h1>
-
+</header>
+<main>
 <table>
     <thead>
     <tr><!-- tr betyder en række af celler i en tabel-->
@@ -30,6 +32,12 @@
 <form th:action="@{/attractions}" method="get">
     <button type="submit">Tilbage</button>
 </form>
-
+</main>
+<footer>
+    <p><Strong>Kontakt os her</Strong></p>
+    <p>Email: <a href="#">teamMMMD@failmail.dk</a></p>
+    <p>Mobil: <a href="#">+45 xxxxxxxx</a></p>
+    <p>&copy; 2024 Tourist Guide Part 2 - TeamMMMD (Mark, Martin, Mette, Daniel)</p>
+</footer>
 </body>
 </html>
