--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -8,7 +8,7 @@
     sikres det at bredden af visning bliver det samme som bredden af skærmen. Initial-scale settingen sørger for, at siden ikke starter zoomet ind eller ud, men starter
     i oprindelig skala i forhold til enhedens skærmopløsning.-->
     <title>Tags</title>
-    <link rel="stylesheet" href="/martin.css">
+    <link rel="stylesheet" href="/list.css">
 </head>
 <body>
 <h1 th:text="${attractionName}"> tags</h1>
