Tilføjelse af tags ml. java og SQL virker. Bruger eksisterende og tidligere java objekt metoder til at facilitere SQL metoder. Mangler DELETE() ml java og SQL. HTML forbindelse endvidere fastlagt. Tilføjet en fejlbesked, hvis brugeren ikke vælger nogle tags til attractionList.html.

--- a/src/main/resources/templates/attractionList.html
+++ b/src/main/resources/templates/attractionList.html
@@ -16,6 +16,9 @@
 <h1>Liste med attraktioner</h1>
 </header>
     <main>
+        <div th:if="${errorMessage}"> <!-- Bruges til at vise en fejlbesked, hvis TouristController L87-89 opfyldes. -->
+            <p th:text="${errorMessage}" style="color:red;"></p>
+        </div>
     <table>
         <thead>
         <tr><!-- tr betyder en række af celler i en tabel-->
